--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "serve-static": "1.11.x",
       "stylelint": "^9.7.1",
       "stylelint-config-standard": "^18.2.0",
-      "tslint": "^5.18.0"
+      "tslint": "^5.18.0",
+      "fs-extra": "9.0.0"
    }
 }
